# abo

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  Readme.md  library.h  run_experiments.sh  sonar-project.properties  stylecheck.sh
.github/workflows/: cpp.yml
benchmark/: CMakeLists.txt  ace_steps.cpp  acr_approx.cpp  approximate_adder_error_metrics.cpp  average_case_error.cpp  iscas85.cpp  operators.cpp  sampling_methods.cpp
benchmark/util/: CMakeLists.txt  benchmark_util.cpp  benchmark_util.hpp
benchmarks/iscas85/: c17.aig
cmake/: BuildBenchmark.cmake  BuildCatch2.cmake  BuildCudd.cmake  BuildLorina.cmake  BuildPagmo2.cmake  EPFLBenchmarks.cmake  public_gc.patch
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  conf.py  example_bdds.rst  index.rst  make.bat  metrics.rst  minimization.rst  operators.rst  parsing.rst  util.rst
experiments/: CMakeLists.txt  bddminimizationproblem.cpp  bddminimizationproblem.hpp  minimize_adders.cpp  minimize_iscas.cpp  nsga2_minimization_helper.cpp  nsga2_minimization_helper.hpp  nsga2_minimize_adders.cpp  nsga2_minimize_iscas.cpp  testing.cpp
experiments/minimization/: CMakeLists.txt  minimize_iscas.cpp  nsga2_minimize_adders.cpp
experiments/minimization/bucket/: CMakeLists.txt  minimize_adders.cpp  minimize_epfl.cpp  minimize_iscas.cpp
experiments/minimization/nsga2/: CMakeLists.txt  nsga2_minimization_helper.hpp  nsga2_minimize_epfl.cpp  nsga2_minimize_iscas.cpp
experiments/misc/: CMakeLists.txt  er_ace_adder_comparison.cpp  improved_sampling.cpp
experiments/runtime/: CMakeLists.txt  ace_steps.cpp  sampling_methods.cpp
experiments/util/: benchmark_util.cpp  benchmark_util.hpp
lib/: CMakeLists.txt
lib/fmt/fmt/: format.h  printf.h
lib/lorina/lorina/: aiger.hpp  bench.hpp  blif.hpp  pla.hpp  verilog.hpp
src/: CMakeLists.txt
src/approximation_operators/: CMakeLists.txt  approximation_operators.cpp  approximation_operators.hpp
src/error_metrics/: CMakeLists.txt  average_bit_flip_error.cpp  average_bit_flip_error.hpp  average_case_error.cpp  average_case_error.hpp  average_case_relative_error.cpp  average_case_relative_error.hpp  error_rate.cpp  error_rate.hpp  worst_case_bit_flip_error.cpp  worst_case_bit_flip_error.hpp  worst_case_error.cpp  worst_case_error.hpp  worst_case_relative_error.cpp  worst_case_relative_error.hpp
src/example_bdds/: CMakeLists.txt  approximate_adders.cpp  approximate_adders.hpp  from_papers.cpp  from_papers.hpp  simple.cpp  simple.hpp
src/minimization/: CMakeLists.txt  bucket_minimization.cpp  bucket_minimization.hpp  minimization_helper.cpp  minimization_helper.hpp
src/parsing/: CMakeLists.txt  aig_parser.cpp  aig_parser.hpp  pla_parser.cpp  pla_parser.hpp
src/util/: CMakeLists.txt  cudd_helpers.cpp  cudd_helpers.hpp  dump_dot.cpp  dump_dot.hpp  function.cpp  function.hpp  number_representation.hpp  string_helpers.cpp  string_helpers.hpp
tests/: CMakeLists.txt  andor.pla  approximation_operations_test.cpp  catch-main.cpp  dc.pla  dump_dot_test.cpp  error_metrics_test.cpp  foo.dot  function_test.cpp  funs.pla  operations_test.cpp  or.pla  parsing_test.cpp
